package com.enteractive.trees;

/**
 * Интерфейс для перемщения блоков
 */
public interface DragListener {
    /**
     * Метод при перемещении блока
     */
    void onDrag();
}
